--- a/src/components/MovieList.css
+++ b/src/components/MovieList.css
@@ -1,3 +1,5 @@
 .movie-list {
   display: flex;
+  /* justify-content: space-around; */
+  flex-wrap: wrap;
 }
